<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslationFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="155dp"
        android:background="@color/teal_700"
        android:text="@string/translated_output"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="106dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/Spinner"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/imageArrow" />

        <Button
            android:id="@+id/Spinner2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:minHeight="48dp" />

    </LinearLayout>

    <TextView
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:padding="3dp"
        android:text="@string/or"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mic"
        android:layout_width="138dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/mic"
        android:src="@drawable/mic" />

    <Button
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="-200dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/translate" />

    <Button
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="-300dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:id="@+id/goBackBtn"/>


</FrameLayout>

